Separated 'result' layouts into fragments; Created action specific events instead of centralized one to improve code legibility and segregation; Changed animations for network and generic error; Added instrumented tests

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,8 +15,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Miketoide">
         <activity
-            android:name=".ui.main.MainActivity"
-            android:launchMode="singleTask">
+            android:name=".ui.activities.MainActivity"
+            android:launchMode="singleTask"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
